alignment issues

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,6 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
-
-
 * {
     padding: 0;
     margin: 0;
@@ -28,7 +26,11 @@ body, html {
     padding: 20px;
     margin-left: 70px;
     border-radius: 10px;
-    background: #fff;
+    /* background: #fff; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+
 }
 h1{
     font-size: 50px;
